# tele-rest-c

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
api/: DefaultAPI.c  DefaultAPI.h
docs/: DefaultAPI.md  _answer_callback_query_post_request.md  _answer_inline_query_post_request.md  _answer_pre_checkout_query_post_request.md  _answer_shipping_query_post_request.md  _answer_web_app_query_post_200_response.md  _answer_web_app_query_post_request.md  _approve_chat_join_request_post_request.md  _ban_chat_member_post_request.md  _ban_chat_member_post_request_chat_id.md  _ban_chat_sender_chat_post_request.md  _close_forum_topic_post_request.md  _convert_gift_to_stars_post_request.md  _copy_message_post_200_response.md  _copy_message_post_request.md  _copy_messages_post_request.md  _create_chat_invite_link_post_200_response.md  _create_chat_invite_link_post_request.md  _create_chat_subscription_invite_link_post_request.md  _create_chat_subscription_invite_link_post_request_chat_id.md  _create_forum_topic_post_200_response.md  _create_forum_topic_post_request.md  _create_invoice_link_post_request.md  _delete_business_messages_post_request.md  _delete_chat_sticker_set_post_request.md  _delete_message_post_request.md  _delete_messages_post_request.md  _delete_my_commands_post_request.md  _delete_sticker_from_set_post_request.md  _delete_sticker_set_post_request.md  _delete_story_post_request.md  _delete_webhook_post_request.md  _edit_chat_invite_link_post_request.md  _edit_chat_subscription_invite_link_post_request.md  _edit_forum_topic_post_request.md  _edit_general_forum_topic_post_request.md  _edit_message_caption_post_request.md  _edit_message_live_location_post_request.md  _edit_message_reply_markup_post_request.md  _edit_message_text_post_200_response.md  (+873 more)
model/: _answer_callback_query_post_request.c  _answer_callback_query_post_request.h  _answer_inline_query_post_request.c  _answer_inline_query_post_request.h  _answer_pre_checkout_query_post_request.c  _answer_pre_checkout_query_post_request.h  _answer_shipping_query_post_request.c  _answer_shipping_query_post_request.h  _answer_web_app_query_post_200_response.c  _answer_web_app_query_post_200_response.h  _answer_web_app_query_post_request.c  _answer_web_app_query_post_request.h  _approve_chat_join_request_post_request.c  _approve_chat_join_request_post_request.h  _ban_chat_member_post_request.c  _ban_chat_member_post_request.h  _ban_chat_member_post_request_chat_id.c  _ban_chat_member_post_request_chat_id.h  _ban_chat_sender_chat_post_request.c  _ban_chat_sender_chat_post_request.h  _close_forum_topic_post_request.c  _close_forum_topic_post_request.h  _convert_gift_to_stars_post_request.c  _convert_gift_to_stars_post_request.h  _copy_message_post_200_response.c  _copy_message_post_200_response.h  _copy_message_post_request.c  _copy_message_post_request.h  _copy_messages_post_request.c  _copy_messages_post_request.h  _create_chat_invite_link_post_200_response.c  _create_chat_invite_link_post_200_response.h  _create_chat_invite_link_post_request.c  _create_chat_invite_link_post_request.h  _create_chat_subscription_invite_link_post_request.c  _create_chat_subscription_invite_link_post_request.h  _create_chat_subscription_invite_link_post_request_chat_id.c  _create_chat_subscription_invite_link_post_request_chat_id.h  _create_forum_topic_post_200_response.c  _create_forum_topic_post_200_response.h  (+1784 more)
src/: apiClient.c
unit-test/: test__answer_callback_query_post_request.c  test__answer_inline_query_post_request.c  test__answer_pre_checkout_query_post_request.c  test__answer_shipping_query_post_request.c  test__answer_web_app_query_post_200_response.c  test__answer_web_app_query_post_request.c  test__approve_chat_join_request_post_request.c  test__ban_chat_member_post_request.c  test__ban_chat_member_post_request_chat_id.c  test__ban_chat_sender_chat_post_request.c  test__close_forum_topic_post_request.c  test__convert_gift_to_stars_post_request.c  test__copy_message_post_200_response.c  test__copy_message_post_request.c  test__copy_messages_post_request.c  test__create_chat_invite_link_post_200_response.c  test__create_chat_invite_link_post_request.c  test__create_chat_subscription_invite_link_post_request.c  test__create_chat_subscription_invite_link_post_request_chat_id.c  test__create_forum_topic_post_200_response.c  test__create_forum_topic_post_request.c  test__create_invoice_link_post_request.c  test__delete_business_messages_post_request.c  test__delete_chat_sticker_set_post_request.c  test__delete_message_post_request.c  test__delete_messages_post_request.c  test__delete_my_commands_post_request.c  test__delete_sticker_from_set_post_request.c  test__delete_sticker_set_post_request.c  test__delete_story_post_request.c  test__delete_webhook_post_request.c  test__edit_chat_invite_link_post_request.c  test__edit_chat_subscription_invite_link_post_request.c  test__edit_forum_topic_post_request.c  test__edit_general_forum_topic_post_request.c  test__edit_message_caption_post_request.c  test__edit_message_live_location_post_request.c  test__edit_message_reply_markup_post_request.c  test__edit_message_text_post_200_response.c  test__edit_message_text_post_200_response_result.c  (+872 more)
