cmake_minimum_required (VERSION 2.6...3.10.2)
project (CGenerator C)

cmake_policy(SET CMP0063 NEW)

set(CMAKE_C_VISIBILITY_PRESET default)
set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=implicit-function-declaration")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=missing-declarations")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=int-conversion")

option(BUILD_SHARED_LIBS "Build using shared libraries" ON)

find_package(OpenSSL)

if (OPENSSL_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DOPENSSL")
    if(CMAKE_VERSION VERSION_LESS 3.4)
        include_directories(${OPENSSL_INCLUDE_DIR})
        include_directories(${OPENSSL_INCLUDE_DIRS})
        link_directories(${OPENSSL_LIBRARIES})
    endif()
endif()

set(pkgName "telegram_bot_api")

# this default version can be overridden in PreTarget.cmake
set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 1)

if( (DEFINED CURL_INCLUDE_DIR) AND (DEFINED CURL_LIBRARIES))
    include_directories(${CURL_INCLUDE_DIR})
    set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
else()
    find_package(CURL 7.58.0 REQUIRED)
    if(CURL_FOUND)
        include_directories(${CURL_INCLUDE_DIR})
        set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
    endif()
endif()

set(SRCS
    src/list.c
    src/apiKey.c
    src/apiClient.c
    src/binary.c
    external/cJSON.c
    model/object.c
    model/_answer_callback_query_post_request.c
    model/_answer_inline_query_post_request.c
    model/_answer_pre_checkout_query_post_request.c
    model/_answer_shipping_query_post_request.c
    model/_answer_web_app_query_post_200_response.c
    model/_answer_web_app_query_post_request.c
    model/_approve_chat_join_request_post_request.c
    model/_ban_chat_member_post_request.c
    model/_ban_chat_member_post_request_chat_id.c
    model/_ban_chat_sender_chat_post_request.c
    model/_close_forum_topic_post_request.c
    model/_convert_gift_to_stars_post_request.c
    model/_copy_message_post_200_response.c
    model/_copy_message_post_request.c
    model/_copy_messages_post_request.c
    model/_create_chat_invite_link_post_200_response.c
    model/_create_chat_invite_link_post_request.c
    model/_create_chat_subscription_invite_link_post_request.c
    model/_create_chat_subscription_invite_link_post_request_chat_id.c
    model/_create_forum_topic_post_200_response.c
    model/_create_forum_topic_post_request.c
    model/_create_invoice_link_post_request.c
    model/_delete_business_messages_post_request.c
    model/_delete_chat_sticker_set_post_request.c
    model/_delete_message_post_request.c
    model/_delete_messages_post_request.c
    model/_delete_my_commands_post_request.c
    model/_delete_sticker_from_set_post_request.c
    model/_delete_sticker_set_post_request.c
    model/_delete_story_post_request.c
    model/_delete_webhook_post_request.c
    model/_edit_chat_invite_link_post_request.c
    model/_edit_chat_subscription_invite_link_post_request.c
    model/_edit_forum_topic_post_request.c
    model/_edit_general_forum_topic_post_request.c
    model/_edit_message_caption_post_request.c
    model/_edit_message_live_location_post_request.c
    model/_edit_message_reply_markup_post_request.c
    model/_edit_message_text_post_200_response.c
    model/_edit_message_text_post_200_response_result.c
    model/_edit_message_text_post_request.c
    model/_edit_message_text_post_request_chat_id.c
    model/_edit_user_star_subscription_post_request.c
    model/_export_chat_invite_link_post_200_response.c
    model/_export_chat_invite_link_post_request.c
    model/_forward_message_post_request.c
    model/_forward_message_post_request_from_chat_id.c
    model/_forward_messages_post_200_response.c
    model/_forward_messages_post_request.c
    model/_forward_messages_post_request_from_chat_id.c
    model/_get_available_gifts_post_200_response.c
    model/_get_business_account_gifts_post_200_response.c
    model/_get_business_account_gifts_post_request.c
    model/_get_business_account_star_balance_post_200_response.c
    model/_get_business_connection_post_200_response.c
    model/_get_business_connection_post_request.c
    model/_get_chat_administrators_post_200_response.c
    model/_get_chat_member_count_post_200_response.c
    model/_get_chat_member_post_200_response.c
    model/_get_chat_member_post_request.c
    model/_get_chat_menu_button_post_200_response.c
    model/_get_chat_menu_button_post_request.c
    model/_get_chat_post_200_response.c
    model/_get_custom_emoji_stickers_post_request.c
    model/_get_file_post_200_response.c
    model/_get_file_post_request.c
    model/_get_forum_topic_icon_stickers_post_200_response.c
    model/_get_game_high_scores_post_200_response.c
    model/_get_game_high_scores_post_request.c
    model/_get_me_post_200_response.c
    model/_get_my_commands_post_200_response.c
    model/_get_my_commands_post_request.c
    model/_get_my_default_administrator_rights_post_200_response.c
    model/_get_my_default_administrator_rights_post_request.c
    model/_get_my_description_post_200_response.c
    model/_get_my_name_post_200_response.c
    model/_get_my_name_post_request.c
    model/_get_my_short_description_post_200_response.c
    model/_get_star_transactions_post_200_response.c
    model/_get_star_transactions_post_request.c
    model/_get_sticker_set_post_200_response.c
    model/_get_sticker_set_post_request.c
    model/_get_updates_post_200_response.c
    model/_get_updates_post_request.c
    model/_get_user_chat_boosts_post_200_response.c
    model/_get_user_chat_boosts_post_request.c
    model/_get_user_chat_boosts_post_request_chat_id.c
    model/_get_user_profile_photos_post_200_response.c
    model/_get_user_profile_photos_post_request.c
    model/_get_webhook_info_post_200_response.c
    model/_gift_premium_subscription_post_request.c
    model/_leave_chat_post_request.c
    model/_leave_chat_post_request_chat_id.c
    model/_pin_chat_message_post_request.c
    model/_post_story_post_200_response.c
    model/_promote_chat_member_post_request.c
    model/_read_business_message_post_request.c
    model/_refund_star_payment_post_request.c
    model/_remove_business_account_profile_photo_post_request.c
    model/_remove_user_verification_post_request.c
    model/_restrict_chat_member_post_request.c
    model/_restrict_chat_member_post_request_chat_id.c
    model/_revoke_chat_invite_link_post_request.c
    model/_revoke_chat_invite_link_post_request_chat_id.c
    model/_save_prepared_inline_message_post_200_response.c
    model/_save_prepared_inline_message_post_request.c
    model/_send_animation_post_request_animation.c
    model/_send_audio_post_request_audio.c
    model/_send_audio_post_request_thumbnail.c
    model/_send_chat_action_post_request.c
    model/_send_contact_post_request.c
    model/_send_dice_post_request.c
    model/_send_document_post_request_document.c
    model/_send_game_post_request.c
    model/_send_gift_post_request.c
    model/_send_gift_post_request_chat_id.c
    model/_send_invoice_post_request.c
    model/_send_location_post_request.c
    model/_send_media_group_post_200_response.c
    model/_send_media_group_post_request_media_inner.c
    model/_send_message_post_200_response.c
    model/_send_message_post_request.c
    model/_send_message_post_request_chat_id.c
    model/_send_message_post_request_reply_markup.c
    model/_send_paid_media_post_request_chat_id.c
    model/_send_photo_post_request_photo.c
    model/_send_poll_post_request.c
    model/_send_sticker_post_request_sticker.c
    model/_send_venue_post_request.c
    model/_send_video_note_post_request_video_note.c
    model/_send_video_post_request_cover.c
    model/_send_video_post_request_video.c
    model/_send_voice_post_request_voice.c
    model/_set_business_account_bio_post_request.c
    model/_set_business_account_gift_settings_post_request.c
    model/_set_business_account_name_post_request.c
    model/_set_business_account_username_post_request.c
    model/_set_chat_administrator_custom_title_post_request.c
    model/_set_chat_description_post_request.c
    model/_set_chat_menu_button_post_request.c
    model/_set_chat_permissions_post_request.c
    model/_set_chat_sticker_set_post_request.c
    model/_set_chat_title_post_request.c
    model/_set_custom_emoji_sticker_set_thumbnail_post_request.c
    model/_set_game_score_post_request.c
    model/_set_message_reaction_post_request.c
    model/_set_my_commands_post_request.c
    model/_set_my_default_administrator_rights_post_request.c
    model/_set_my_description_post_request.c
    model/_set_my_name_post_request.c
    model/_set_my_short_description_post_request.c
    model/_set_passport_data_errors_post_request.c
    model/_set_sticker_emoji_list_post_request.c
    model/_set_sticker_keywords_post_request.c
    model/_set_sticker_mask_position_post_request.c
    model/_set_sticker_position_in_set_post_request.c
    model/_set_sticker_set_thumbnail_post_request_thumbnail.c
    model/_set_sticker_set_title_post_request.c
    model/_set_user_emoji_status_post_request.c
    model/_set_webhook_post_200_response.c
    model/_stop_message_live_location_post_request.c
    model/_stop_poll_post_200_response.c
    model/_stop_poll_post_request.c
    model/_transfer_business_account_stars_post_request.c
    model/_transfer_gift_post_request.c
    model/_unban_chat_member_post_request.c
    model/_unpin_chat_message_post_request.c
    model/_upgrade_gift_post_request.c
    model/_verify_chat_post_request.c
    model/_verify_user_post_request.c
    model/accepted_gift_types.c
    model/affiliate_info.c
    model/animation.c
    model/audio.c
    model/background_fill.c
    model/background_fill_freeform_gradient.c
    model/background_fill_gradient.c
    model/background_fill_solid.c
    model/background_type.c
    model/background_type_chat_theme.c
    model/background_type_fill.c
    model/background_type_pattern.c
    model/background_type_wallpaper.c
    model/birthdate.c
    model/bot_command.c
    model/bot_command_scope.c
    model/bot_command_scope_all_chat_administrators.c
    model/bot_command_scope_all_group_chats.c
    model/bot_command_scope_all_private_chats.c
    model/bot_command_scope_chat.c
    model/bot_command_scope_chat_administrators.c
    model/bot_command_scope_chat_member.c
    model/bot_command_scope_default.c
    model/bot_description.c
    model/bot_name.c
    model/bot_short_description.c
    model/business_bot_rights.c
    model/business_connection.c
    model/business_intro.c
    model/business_location.c
    model/business_messages_deleted.c
    model/business_opening_hours.c
    model/business_opening_hours_interval.c
    model/callback_query.c
    model/chat.c
    model/chat_administrator_rights.c
    model/chat_background.c
    model/chat_boost.c
    model/chat_boost_added.c
    model/chat_boost_removed.c
    model/chat_boost_source.c
    model/chat_boost_source_gift_code.c
    model/chat_boost_source_giveaway.c
    model/chat_boost_source_premium.c
    model/chat_boost_updated.c
    model/chat_full_info.c
    model/chat_invite_link.c
    model/chat_join_request.c
    model/chat_location.c
    model/chat_member.c
    model/chat_member_administrator.c
    model/chat_member_banned.c
    model/chat_member_left.c
    model/chat_member_member.c
    model/chat_member_owner.c
    model/chat_member_restricted.c
    model/chat_member_updated.c
    model/chat_permissions.c
    model/chat_photo.c
    model/chat_shared.c
    model/chosen_inline_result.c
    model/contact.c
    model/copy_text_button.c
    model/dice.c
    model/document.c
    model/encrypted_credentials.c
    model/encrypted_passport_element.c
    model/error.c
    model/external_reply_info.c
    model/file.c
    model/force_reply.c
    model/forum_topic.c
    model/forum_topic_created.c
    model/forum_topic_edited.c
    model/game.c
    model/game_high_score.c
    model/gift.c
    model/gift_info.c
    model/gifts.c
    model/giveaway.c
    model/giveaway_completed.c
    model/giveaway_created.c
    model/giveaway_winners.c
    model/inaccessible_message.c
    model/inline_keyboard_button.c
    model/inline_keyboard_markup.c
    model/inline_query.c
    model/inline_query_result.c
    model/inline_query_result_article.c
    model/inline_query_result_audio.c
    model/inline_query_result_cached_audio.c
    model/inline_query_result_cached_document.c
    model/inline_query_result_cached_gif.c
    model/inline_query_result_cached_mpeg4_gif.c
    model/inline_query_result_cached_photo.c
    model/inline_query_result_cached_sticker.c
    model/inline_query_result_cached_video.c
    model/inline_query_result_cached_voice.c
    model/inline_query_result_contact.c
    model/inline_query_result_document.c
    model/inline_query_result_game.c
    model/inline_query_result_gif.c
    model/inline_query_result_location.c
    model/inline_query_result_mpeg4_gif.c
    model/inline_query_result_photo.c
    model/inline_query_result_venue.c
    model/inline_query_result_video.c
    model/inline_query_result_voice.c
    model/inline_query_results_button.c
    model/input_contact_message_content.c
    model/input_invoice_message_content.c
    model/input_location_message_content.c
    model/input_media.c
    model/input_media_animation.c
    model/input_media_audio.c
    model/input_media_document.c
    model/input_media_photo.c
    model/input_media_video.c
    model/input_message_content.c
    model/input_paid_media.c
    model/input_paid_media_photo.c
    model/input_paid_media_video.c
    model/input_poll_option.c
    model/input_profile_photo.c
    model/input_profile_photo_animated.c
    model/input_profile_photo_static.c
    model/input_sticker.c
    model/input_story_content.c
    model/input_story_content_photo.c
    model/input_story_content_video.c
    model/input_text_message_content.c
    model/input_venue_message_content.c
    model/invoice.c
    model/keyboard_button.c
    model/keyboard_button_poll_type.c
    model/keyboard_button_request_chat.c
    model/keyboard_button_request_users.c
    model/labeled_price.c
    model/link_preview_options.c
    model/location.c
    model/location_address.c
    model/login_url.c
    model/mask_position.c
    model/maybe_inaccessible_message.c
    model/menu_button.c
    model/menu_button_commands.c
    model/menu_button_default.c
    model/menu_button_web_app.c
    model/message.c
    model/message_auto_delete_timer_changed.c
    model/message_entity.c
    model/message_id.c
    model/message_origin.c
    model/message_origin_channel.c
    model/message_origin_chat.c
    model/message_origin_hidden_user.c
    model/message_origin_user.c
    model/message_reaction_count_updated.c
    model/message_reaction_updated.c
    model/order_info.c
    model/owned_gift.c
    model/owned_gift_regular.c
    model/owned_gift_unique.c
    model/owned_gifts.c
    model/paid_media.c
    model/paid_media_info.c
    model/paid_media_photo.c
    model/paid_media_preview.c
    model/paid_media_purchased.c
    model/paid_media_video.c
    model/paid_message_price_changed.c
    model/passport_data.c
    model/passport_element_error.c
    model/passport_element_error_data_field.c
    model/passport_element_error_file.c
    model/passport_element_error_files.c
    model/passport_element_error_front_side.c
    model/passport_element_error_reverse_side.c
    model/passport_element_error_selfie.c
    model/passport_element_error_translation_file.c
    model/passport_element_error_translation_files.c
    model/passport_element_error_unspecified.c
    model/passport_file.c
    model/photo_size.c
    model/poll.c
    model/poll_answer.c
    model/poll_option.c
    model/pre_checkout_query.c
    model/prepared_inline_message.c
    model/proximity_alert_triggered.c
    model/reaction_count.c
    model/reaction_type.c
    model/reaction_type_custom_emoji.c
    model/reaction_type_emoji.c
    model/reaction_type_paid.c
    model/refunded_payment.c
    model/reply_keyboard_markup.c
    model/reply_keyboard_remove.c
    model/reply_parameters.c
    model/reply_parameters_chat_id.c
    model/response_parameters.c
    model/revenue_withdrawal_state.c
    model/revenue_withdrawal_state_failed.c
    model/revenue_withdrawal_state_pending.c
    model/revenue_withdrawal_state_succeeded.c
    model/sent_web_app_message.c
    model/shared_user.c
    model/shipping_address.c
    model/shipping_option.c
    model/shipping_query.c
    model/star_amount.c
    model/star_transaction.c
    model/star_transactions.c
    model/sticker.c
    model/sticker_set.c
    model/story.c
    model/story_area.c
    model/story_area_position.c
    model/story_area_type.c
    model/story_area_type_link.c
    model/story_area_type_location.c
    model/story_area_type_suggested_reaction.c
    model/story_area_type_unique_gift.c
    model/story_area_type_weather.c
    model/successful_payment.c
    model/switch_inline_query_chosen_chat.c
    model/text_quote.c
    model/transaction_partner.c
    model/transaction_partner_affiliate_program.c
    model/transaction_partner_chat.c
    model/transaction_partner_fragment.c
    model/transaction_partner_other.c
    model/transaction_partner_telegram_ads.c
    model/transaction_partner_telegram_api.c
    model/transaction_partner_user.c
    model/unique_gift.c
    model/unique_gift_backdrop.c
    model/unique_gift_backdrop_colors.c
    model/unique_gift_info.c
    model/unique_gift_model.c
    model/unique_gift_symbol.c
    model/update.c
    model/user.c
    model/user_chat_boosts.c
    model/user_profile_photos.c
    model/users_shared.c
    model/venue.c
    model/video.c
    model/video_chat_ended.c
    model/video_chat_participants_invited.c
    model/video_chat_scheduled.c
    model/video_note.c
    model/voice.c
    model/web_app_data.c
    model/web_app_info.c
    model/webhook_info.c
    model/write_access_allowed.c
    api/DefaultAPI.c

)

set(HDRS
    include/apiClient.h
    include/list.h
    include/binary.h
    include/keyValuePair.h
    external/cJSON.h
    model/object.h
    model/any_type.h
    model/_answer_callback_query_post_request.h
    model/_answer_inline_query_post_request.h
    model/_answer_pre_checkout_query_post_request.h
    model/_answer_shipping_query_post_request.h
    model/_answer_web_app_query_post_200_response.h
    model/_answer_web_app_query_post_request.h
    model/_approve_chat_join_request_post_request.h
    model/_ban_chat_member_post_request.h
    model/_ban_chat_member_post_request_chat_id.h
    model/_ban_chat_sender_chat_post_request.h
    model/_close_forum_topic_post_request.h
    model/_convert_gift_to_stars_post_request.h
    model/_copy_message_post_200_response.h
    model/_copy_message_post_request.h
    model/_copy_messages_post_request.h
    model/_create_chat_invite_link_post_200_response.h
    model/_create_chat_invite_link_post_request.h
    model/_create_chat_subscription_invite_link_post_request.h
    model/_create_chat_subscription_invite_link_post_request_chat_id.h
    model/_create_forum_topic_post_200_response.h
    model/_create_forum_topic_post_request.h
    model/_create_invoice_link_post_request.h
    model/_delete_business_messages_post_request.h
    model/_delete_chat_sticker_set_post_request.h
    model/_delete_message_post_request.h
    model/_delete_messages_post_request.h
    model/_delete_my_commands_post_request.h
    model/_delete_sticker_from_set_post_request.h
    model/_delete_sticker_set_post_request.h
    model/_delete_story_post_request.h
    model/_delete_webhook_post_request.h
    model/_edit_chat_invite_link_post_request.h
    model/_edit_chat_subscription_invite_link_post_request.h
    model/_edit_forum_topic_post_request.h
    model/_edit_general_forum_topic_post_request.h
    model/_edit_message_caption_post_request.h
    model/_edit_message_live_location_post_request.h
    model/_edit_message_reply_markup_post_request.h
    model/_edit_message_text_post_200_response.h
    model/_edit_message_text_post_200_response_result.h
    model/_edit_message_text_post_request.h
    model/_edit_message_text_post_request_chat_id.h
    model/_edit_user_star_subscription_post_request.h
    model/_export_chat_invite_link_post_200_response.h
    model/_export_chat_invite_link_post_request.h
    model/_forward_message_post_request.h
    model/_forward_message_post_request_from_chat_id.h
    model/_forward_messages_post_200_response.h
    model/_forward_messages_post_request.h
    model/_forward_messages_post_request_from_chat_id.h
    model/_get_available_gifts_post_200_response.h
    model/_get_business_account_gifts_post_200_response.h
    model/_get_business_account_gifts_post_request.h
    model/_get_business_account_star_balance_post_200_response.h
    model/_get_business_connection_post_200_response.h
    model/_get_business_connection_post_request.h
    model/_get_chat_administrators_post_200_response.h
    model/_get_chat_member_count_post_200_response.h
    model/_get_chat_member_post_200_response.h
    model/_get_chat_member_post_request.h
    model/_get_chat_menu_button_post_200_response.h
    model/_get_chat_menu_button_post_request.h
    model/_get_chat_post_200_response.h
    model/_get_custom_emoji_stickers_post_request.h
    model/_get_file_post_200_response.h
    model/_get_file_post_request.h
    model/_get_forum_topic_icon_stickers_post_200_response.h
    model/_get_game_high_scores_post_200_response.h
    model/_get_game_high_scores_post_request.h
    model/_get_me_post_200_response.h
    model/_get_my_commands_post_200_response.h
    model/_get_my_commands_post_request.h
    model/_get_my_default_administrator_rights_post_200_response.h
    model/_get_my_default_administrator_rights_post_request.h
    model/_get_my_description_post_200_response.h
    model/_get_my_name_post_200_response.h
    model/_get_my_name_post_request.h
    model/_get_my_short_description_post_200_response.h
    model/_get_star_transactions_post_200_response.h
    model/_get_star_transactions_post_request.h
    model/_get_sticker_set_post_200_response.h
    model/_get_sticker_set_post_request.h
    model/_get_updates_post_200_response.h
    model/_get_updates_post_request.h
    model/_get_user_chat_boosts_post_200_response.h
    model/_get_user_chat_boosts_post_request.h
    model/_get_user_chat_boosts_post_request_chat_id.h
    model/_get_user_profile_photos_post_200_response.h
    model/_get_user_profile_photos_post_request.h
    model/_get_webhook_info_post_200_response.h
    model/_gift_premium_subscription_post_request.h
    model/_leave_chat_post_request.h
    model/_leave_chat_post_request_chat_id.h
    model/_pin_chat_message_post_request.h
    model/_post_story_post_200_response.h
    model/_promote_chat_member_post_request.h
    model/_read_business_message_post_request.h
    model/_refund_star_payment_post_request.h
    model/_remove_business_account_profile_photo_post_request.h
    model/_remove_user_verification_post_request.h
    model/_restrict_chat_member_post_request.h
    model/_restrict_chat_member_post_request_chat_id.h
    model/_revoke_chat_invite_link_post_request.h
    model/_revoke_chat_invite_link_post_request_chat_id.h
    model/_save_prepared_inline_message_post_200_response.h
    model/_save_prepared_inline_message_post_request.h
    model/_send_animation_post_request_animation.h
    model/_send_audio_post_request_audio.h
    model/_send_audio_post_request_thumbnail.h
    model/_send_chat_action_post_request.h
    model/_send_contact_post_request.h
    model/_send_dice_post_request.h
    model/_send_document_post_request_document.h
    model/_send_game_post_request.h
    model/_send_gift_post_request.h
    model/_send_gift_post_request_chat_id.h
    model/_send_invoice_post_request.h
    model/_send_location_post_request.h
    model/_send_media_group_post_200_response.h
    model/_send_media_group_post_request_media_inner.h
    model/_send_message_post_200_response.h
    model/_send_message_post_request.h
    model/_send_message_post_request_chat_id.h
    model/_send_message_post_request_reply_markup.h
    model/_send_paid_media_post_request_chat_id.h
    model/_send_photo_post_request_photo.h
    model/_send_poll_post_request.h
    model/_send_sticker_post_request_sticker.h
    model/_send_venue_post_request.h
    model/_send_video_note_post_request_video_note.h
    model/_send_video_post_request_cover.h
    model/_send_video_post_request_video.h
    model/_send_voice_post_request_voice.h
    model/_set_business_account_bio_post_request.h
    model/_set_business_account_gift_settings_post_request.h
    model/_set_business_account_name_post_request.h
    model/_set_business_account_username_post_request.h
    model/_set_chat_administrator_custom_title_post_request.h
    model/_set_chat_description_post_request.h
    model/_set_chat_menu_button_post_request.h
    model/_set_chat_permissions_post_request.h
    model/_set_chat_sticker_set_post_request.h
    model/_set_chat_title_post_request.h
    model/_set_custom_emoji_sticker_set_thumbnail_post_request.h
    model/_set_game_score_post_request.h
    model/_set_message_reaction_post_request.h
    model/_set_my_commands_post_request.h
    model/_set_my_default_administrator_rights_post_request.h
    model/_set_my_description_post_request.h
    model/_set_my_name_post_request.h
    model/_set_my_short_description_post_request.h
    model/_set_passport_data_errors_post_request.h
    model/_set_sticker_emoji_list_post_request.h
    model/_set_sticker_keywords_post_request.h
    model/_set_sticker_mask_position_post_request.h
    model/_set_sticker_position_in_set_post_request.h
    model/_set_sticker_set_thumbnail_post_request_thumbnail.h
    model/_set_sticker_set_title_post_request.h
    model/_set_user_emoji_status_post_request.h
    model/_set_webhook_post_200_response.h
    model/_stop_message_live_location_post_request.h
    model/_stop_poll_post_200_response.h
    model/_stop_poll_post_request.h
    model/_transfer_business_account_stars_post_request.h
    model/_transfer_gift_post_request.h
    model/_unban_chat_member_post_request.h
    model/_unpin_chat_message_post_request.h
    model/_upgrade_gift_post_request.h
    model/_verify_chat_post_request.h
    model/_verify_user_post_request.h
    model/accepted_gift_types.h
    model/affiliate_info.h
    model/animation.h
    model/audio.h
    model/background_fill.h
    model/background_fill_freeform_gradient.h
    model/background_fill_gradient.h
    model/background_fill_solid.h
    model/background_type.h
    model/background_type_chat_theme.h
    model/background_type_fill.h
    model/background_type_pattern.h
    model/background_type_wallpaper.h
    model/birthdate.h
    model/bot_command.h
    model/bot_command_scope.h
    model/bot_command_scope_all_chat_administrators.h
    model/bot_command_scope_all_group_chats.h
    model/bot_command_scope_all_private_chats.h
    model/bot_command_scope_chat.h
    model/bot_command_scope_chat_administrators.h
    model/bot_command_scope_chat_member.h
    model/bot_command_scope_default.h
    model/bot_description.h
    model/bot_name.h
    model/bot_short_description.h
    model/business_bot_rights.h
    model/business_connection.h
    model/business_intro.h
    model/business_location.h
    model/business_messages_deleted.h
    model/business_opening_hours.h
    model/business_opening_hours_interval.h
    model/callback_query.h
    model/chat.h
    model/chat_administrator_rights.h
    model/chat_background.h
    model/chat_boost.h
    model/chat_boost_added.h
    model/chat_boost_removed.h
    model/chat_boost_source.h
    model/chat_boost_source_gift_code.h
    model/chat_boost_source_giveaway.h
    model/chat_boost_source_premium.h
    model/chat_boost_updated.h
    model/chat_full_info.h
    model/chat_invite_link.h
    model/chat_join_request.h
    model/chat_location.h
    model/chat_member.h
    model/chat_member_administrator.h
    model/chat_member_banned.h
    model/chat_member_left.h
    model/chat_member_member.h
    model/chat_member_owner.h
    model/chat_member_restricted.h
    model/chat_member_updated.h
    model/chat_permissions.h
    model/chat_photo.h
    model/chat_shared.h
    model/chosen_inline_result.h
    model/contact.h
    model/copy_text_button.h
    model/dice.h
    model/document.h
    model/encrypted_credentials.h
    model/encrypted_passport_element.h
    model/error.h
    model/external_reply_info.h
    model/file.h
    model/force_reply.h
    model/forum_topic.h
    model/forum_topic_created.h
    model/forum_topic_edited.h
    model/game.h
    model/game_high_score.h
    model/gift.h
    model/gift_info.h
    model/gifts.h
    model/giveaway.h
    model/giveaway_completed.h
    model/giveaway_created.h
    model/giveaway_winners.h
    model/inaccessible_message.h
    model/inline_keyboard_button.h
    model/inline_keyboard_markup.h
    model/inline_query.h
    model/inline_query_result.h
    model/inline_query_result_article.h
    model/inline_query_result_audio.h
    model/inline_query_result_cached_audio.h
    model/inline_query_result_cached_document.h
    model/inline_query_result_cached_gif.h
    model/inline_query_result_cached_mpeg4_gif.h
    model/inline_query_result_cached_photo.h
    model/inline_query_result_cached_sticker.h
    model/inline_query_result_cached_video.h
    model/inline_query_result_cached_voice.h
    model/inline_query_result_contact.h
    model/inline_query_result_document.h
    model/inline_query_result_game.h
    model/inline_query_result_gif.h
    model/inline_query_result_location.h
    model/inline_query_result_mpeg4_gif.h
    model/inline_query_result_photo.h
    model/inline_query_result_venue.h
    model/inline_query_result_video.h
    model/inline_query_result_voice.h
    model/inline_query_results_button.h
    model/input_contact_message_content.h
    model/input_invoice_message_content.h
    model/input_location_message_content.h
    model/input_media.h
    model/input_media_animation.h
    model/input_media_audio.h
    model/input_media_document.h
    model/input_media_photo.h
    model/input_media_video.h
    model/input_message_content.h
    model/input_paid_media.h
    model/input_paid_media_photo.h
    model/input_paid_media_video.h
    model/input_poll_option.h
    model/input_profile_photo.h
    model/input_profile_photo_animated.h
    model/input_profile_photo_static.h
    model/input_sticker.h
    model/input_story_content.h
    model/input_story_content_photo.h
    model/input_story_content_video.h
    model/input_text_message_content.h
    model/input_venue_message_content.h
    model/invoice.h
    model/keyboard_button.h
    model/keyboard_button_poll_type.h
    model/keyboard_button_request_chat.h
    model/keyboard_button_request_users.h
    model/labeled_price.h
    model/link_preview_options.h
    model/location.h
    model/location_address.h
    model/login_url.h
    model/mask_position.h
    model/maybe_inaccessible_message.h
    model/menu_button.h
    model/menu_button_commands.h
    model/menu_button_default.h
    model/menu_button_web_app.h
    model/message.h
    model/message_auto_delete_timer_changed.h
    model/message_entity.h
    model/message_id.h
    model/message_origin.h
    model/message_origin_channel.h
    model/message_origin_chat.h
    model/message_origin_hidden_user.h
    model/message_origin_user.h
    model/message_reaction_count_updated.h
    model/message_reaction_updated.h
    model/order_info.h
    model/owned_gift.h
    model/owned_gift_regular.h
    model/owned_gift_unique.h
    model/owned_gifts.h
    model/paid_media.h
    model/paid_media_info.h
    model/paid_media_photo.h
    model/paid_media_preview.h
    model/paid_media_purchased.h
    model/paid_media_video.h
    model/paid_message_price_changed.h
    model/passport_data.h
    model/passport_element_error.h
    model/passport_element_error_data_field.h
    model/passport_element_error_file.h
    model/passport_element_error_files.h
    model/passport_element_error_front_side.h
    model/passport_element_error_reverse_side.h
    model/passport_element_error_selfie.h
    model/passport_element_error_translation_file.h
    model/passport_element_error_translation_files.h
    model/passport_element_error_unspecified.h
    model/passport_file.h
    model/photo_size.h
    model/poll.h
    model/poll_answer.h
    model/poll_option.h
    model/pre_checkout_query.h
    model/prepared_inline_message.h
    model/proximity_alert_triggered.h
    model/reaction_count.h
    model/reaction_type.h
    model/reaction_type_custom_emoji.h
    model/reaction_type_emoji.h
    model/reaction_type_paid.h
    model/refunded_payment.h
    model/reply_keyboard_markup.h
    model/reply_keyboard_remove.h
    model/reply_parameters.h
    model/reply_parameters_chat_id.h
    model/response_parameters.h
    model/revenue_withdrawal_state.h
    model/revenue_withdrawal_state_failed.h
    model/revenue_withdrawal_state_pending.h
    model/revenue_withdrawal_state_succeeded.h
    model/sent_web_app_message.h
    model/shared_user.h
    model/shipping_address.h
    model/shipping_option.h
    model/shipping_query.h
    model/star_amount.h
    model/star_transaction.h
    model/star_transactions.h
    model/sticker.h
    model/sticker_set.h
    model/story.h
    model/story_area.h
    model/story_area_position.h
    model/story_area_type.h
    model/story_area_type_link.h
    model/story_area_type_location.h
    model/story_area_type_suggested_reaction.h
    model/story_area_type_unique_gift.h
    model/story_area_type_weather.h
    model/successful_payment.h
    model/switch_inline_query_chosen_chat.h
    model/text_quote.h
    model/transaction_partner.h
    model/transaction_partner_affiliate_program.h
    model/transaction_partner_chat.h
    model/transaction_partner_fragment.h
    model/transaction_partner_other.h
    model/transaction_partner_telegram_ads.h
    model/transaction_partner_telegram_api.h
    model/transaction_partner_user.h
    model/unique_gift.h
    model/unique_gift_backdrop.h
    model/unique_gift_backdrop_colors.h
    model/unique_gift_info.h
    model/unique_gift_model.h
    model/unique_gift_symbol.h
    model/update.h
    model/user.h
    model/user_chat_boosts.h
    model/user_profile_photos.h
    model/users_shared.h
    model/venue.h
    model/video.h
    model/video_chat_ended.h
    model/video_chat_participants_invited.h
    model/video_chat_scheduled.h
    model/video_note.h
    model/voice.h
    model/web_app_data.h
    model/web_app_info.h
    model/webhook_info.h
    model/write_access_allowed.h
    api/DefaultAPI.h

)

include(PreTarget.cmake OPTIONAL)

set(PROJECT_VERSION_STRING "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

# Add library with project file with project name as library name
add_library(${pkgName} ${SRCS} ${HDRS})
# Link dependent libraries
if(NOT CMAKE_VERSION VERSION_LESS 3.4)
    target_link_libraries(${pkgName} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
endif()
target_link_libraries(${pkgName} PUBLIC ${CURL_LIBRARIES} )
target_include_directories(
    ${pkgName} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:include>
)

include(PostTarget.cmake OPTIONAL)

# installation of libraries, headers, and config files
if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in)
    install(TARGETS ${pkgName} DESTINATION lib)
else()
    include(GNUInstallDirs)
    install(TARGETS ${pkgName} DESTINATION lib EXPORT ${pkgName}Targets)

    foreach(HDR_FILE ${HDRS})
        get_filename_component(HDR_DIRECTORY ${HDR_FILE} DIRECTORY)
        get_filename_component(ABSOLUTE_HDR_DIRECTORY ${HDR_DIRECTORY} ABSOLUTE)
        file(RELATIVE_PATH RELATIVE_HDR_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${ABSOLUTE_HDR_DIRECTORY})
        install(FILES ${HDR_FILE} DESTINATION include/${pkgName}/${RELATIVE_HDR_PATH})
    endforeach()

    include(CMakePackageConfigHelpers)
    write_basic_package_version_file(
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}ConfigVersion.cmake"
            VERSION "${PROJECT_VERSION_STRING}"
            COMPATIBILITY AnyNewerVersion
    )

    export(EXPORT ${pkgName}Targets
            FILE "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Targets.cmake"
            NAMESPACE ${pkgName}::
            )

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Config.cmake"
            @ONLY
            )

    set(ConfigPackageLocation lib/cmake/${pkgName})
    install(EXPORT ${pkgName}Targets
            FILE
            ${pkgName}Targets.cmake
            NAMESPACE
            ${pkgName}::
            DESTINATION
            ${ConfigPackageLocation}
            )
    install(
            FILES
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Config.cmake"
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}ConfigVersion.cmake"
            DESTINATION
            ${ConfigPackageLocation}
    )
endif()

# make installation packages
include(Packing.cmake OPTIONAL)

# Setting file variables to null
set(SRCS "")
set(HDRS "")


## This section shows how to use the above compiled library to compile the source files
## set source files
#set(SRCS
#    unit-tests/manual-DefaultAPI.c
#)

##set header files
#set(HDRS
#)

## loop over all files in SRCS variable
#foreach(SOURCE_FILE ${SRCS})
#    # Get only the file name from the file as add_executable does not support executable with slash("/")
#    get_filename_component(FILE_NAME_ONLY ${SOURCE_FILE} NAME_WE)
#    # Remove .c from the file name and set it as executable name
#    string( REPLACE ".c" "" EXECUTABLE_FILE ${FILE_NAME_ONLY})
#    # Add executable for every source file in  SRCS
#    add_executable(unit-${EXECUTABLE_FILE} ${SOURCE_FILE})
#    # Link above created library to executable and dependent library curl
#    target_link_libraries(unit-${EXECUTABLE_FILE} ${CURL_LIBRARIES} ${pkgName} )
#endforeach(SOURCE_FILE ${SRCS})
